This commit involves updates to both Issues: Content of detail views hidden behind page header #261 & Adjust the "Look and Feel" of the Row and Form controls input and buttons with CSS. #253.

--- a/smdb/smdb/static/css/filters.css
+++ b/smdb/smdb/static/css/filters.css
@@ -8,7 +8,6 @@
   width: 100%;
   z-index: 600; 
 }
-
 #filter-left {
   flex-direction: row;
   background-color: white;
@@ -27,7 +26,6 @@
   left: 0;
   margin-left: 0
 }
-
 #filter-center {
   flex-direction: row;
   left: 0;
@@ -49,7 +47,6 @@
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
 }
-
 #filter-right {
   width: 450px;
   height: 75px;
@@ -61,19 +58,16 @@
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
 }
-
 #searchBarForm {
   padding-top: 10px;
   width: 100%;
 }
-
 #searchbar {
   padding-right: 3%;
   margin-left: 3em;
   text-align: left;
   position:relative;
 }
-
 #searchbtn {
   width: calc(100%);
   height: calc(1.5em + .75rem + 2px);
@@ -82,12 +76,104 @@
   margin-top: 0em !important;
   align-content: center;
 }
-
-#loadBtn {
+/* #loadBtn {
 padding-left: 20px;
 padding-right: 20px;
+} */
+#loadBtn,
+#login_submit_btn {
+  padding-left: 20px;
+  padding-right: 20px;
 }
-
+#alert_styling {
+  padding-top: 100px;
+  font-size: x-large;
+}
+#verify_email_h2 {
+  margin-top: 100px;
+  padding-top: 30px;
+}
+#verify_email_paragraph {
+  margin-left: 0rem;
+  margin-top: 10px;
+  font-size: large;
+}
+#email_detail_row {
+  position: relative;
+  flex-shrink: 2;
+  padding-top: 100px;
+  padding-bottom: 25px;
+}
+#email_form_p {
+  margin-top: 0px;
+  font-size: x-large;
+}
+#email_radio_div {
+  margin-top: 130px;
+}
+#email_form_h2 {
+  position: relative;
+  margin-top: 19.5rem;
+  margin-left: 0rem;
+}
+#email_form_add_email {
+  flex-shrink: 2;
+}
+#user_detail_container {
+  position: relative;
+  margin-left: auto;
+  padding-top: 100px;
+  padding-left: 0px;
+  padding-bottom: 25px;
+}
+#user_detail_col,
+#user_form_horizontal {
+  margin-left: 3rem;
+  margin-top: 0.5rem;
+  width: 25%;
+}
+#user_btn_info,
+#user_btn_email,
+#user_form_btn_update,
+#email_btn {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: 0rem;
+  margin-right: 0.5rem;
+}
+#email_form_p {
+  margin-left: 0rem;
+  padding-top: 100px;
+  padding-left: 0px;
+}
+#email_verifed {
+  color: green;
+  font-weight: bold;
+}
+#email_unverified {
+  color: red;
+  font-weight: bold;
+}
+#email_primary {
+  color: blue;
+  font-weight: bold;
+}
+#email_form_list {
+  margin-left: 0rem;
+  /* margin-top:0rem; */
+  /* padding-top: -10px; */
+  padding-left: 0px;
+}
+#user_form_h1,
+#email_form_h1 {
+  position: absolute;
+  top: 5.5rem;
+  padding-top: 10px;
+}
+#email_form_h2 {
+  margin-left: 0rem;
+  margin-bottom: 0rem;
+}
 form {
     top: 140px;
     position: absolute;
@@ -95,13 +181,11 @@ form {
     margin-left: 0rem;
     margin-right: 3rem;
 }
-
 div.form-group.col-md,
 div.col-md {
     margin-bottom: 10px;
     margin-top: 10px;
 }
-
 /* Buttons */
 div.form-group.col-md-2,
 div.col-md-2 {
@@ -109,23 +193,23 @@ div.col-md-2 {
   margin-bottom: 10px;
   margin-top: 10px;
 }
-
+div.form-group.col-md-3,
+div.col-md-3 {
+  width: 30%;
+  padding-top:10px;
+  /* margin-bottom: 10px;
+  margin-top: 10px; */
+}
 form.leaflet-control-layers-list {
     top: 0px;
     margin-right: 0px;
     width: max-content;
 }
-
 form
 div.row {
     width: 100%;
     height: 55px;
 }
-
-/* #div_id_name {
-    align-content: center;
-} */
-
 #submit_id_submit, .btn, .btn-primary {
     border: 1.75px solid;
     border-color: black;
@@ -139,96 +223,82 @@ div.row {
     font-size: small;
     margin: 0em;
 }
-
 div.col-md {
   min-width: max-content;
 }
-
 div#tableContainers4.table-container {
   position: absolute;
   top: 700px;
   width: 95%;
 }
-
-div#div_id_name.mb-3 {
-  width: 100%;
-  margin-top: 0.5rem !important;
-  margin-bottom: 0.5rem !important;
+#div_id_name {
+box-sizing: content-box;
 }
-
-
 #slider-row {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
 }
-
 .col-2 {
     flex-direction: row;
     padding-left: 0px;
     padding-right: 0px;
 }
-
 .col-6 {
     flex-direction: row;
 }
-
 .col-8
 #slider-current {
     flex-direction: row;
     width: 80%
 }
-
 .mb-0 
 #missionFilterSubmit {
   margin-bottom: 0.5rem !important;
   margin-top: 0.5rem !important;
 }
-
 #mission_detail_row {
   position: relative;
   padding-top: 100px;
-  padding-bottom: 25px;
+  padding-bottom: 35px;
 }
-
 #mission_detail_notes_row, h3 {
   position: relative;
-  padding-right: 25px;
-  top: 10px;
+  padding-left: 5px;
+  padding-right: 20px;
 }
-
+#mission_notes_txt {
+  font-size: 1.5rem;
+}
 .mb-0 
 #expeditionFilterSubmit {
   margin-bottom: 0.5rem !important;
   margin-top: 0.5rem !important;
 }
-
 .col-md
-#expeditionFilterSubmit {
-  width: 30%
+#expeditionFilterSubmit,
+#expeditionFilterCancel,
+#compilationFilterSubmit,
+#compilationFilterCancel {
+  width: 100px;
 }
-
-#expedition_detail_row {
-  width: 30%;
-}
-
-#expedition_detail_row {
+#expedition_detail_row,
+#compilation_detail_row {
+  width: 100%;
   position: relative;
   padding-top: 100px;
   padding-bottom: 25px;
 }
-
 .mb-0 
-#compilationFilterSubmit {
-  margin-bottom: 0.5rem !important;
-  margin-top: 0.5rem !important;
+#compilationFilterSubmit,
+#compilationFilterCancel {
+  margin-bottom: 1rem !important;
+  margin-top: 0rem !important;
 }
-
 #compilation_detail_row {
   position: relative;
   padding-top: 100px;
   padding-bottom: 25px;
 }
-
 form#searchBarForm {
     top: 0px;
     position: relative;
@@ -238,7 +308,6 @@ form#searchBarForm.d-flex {
     margin-left: 1rem;
     margin-right: 1rem;
 }
-
 h2#mission_h2 {
     position: absolute;
     top: 84px;
