--- a/smdb/smdb/static/css/project.css
+++ b/smdb/smdb/static/css/project.css
@@ -41,7 +41,11 @@ h2 {
 p {
     margin-left: 3rem;
     margin-right: 3rem;
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
+}
+
+pre {
+    margin-bottom: 3rem;
 }
 
 
@@ -197,9 +201,15 @@ div.width_fixed {
 }
 
 #footer {
+  position: fixed;
+  background-color: white;
+  bottom: 0;
+  width: 100%;
+  height: 5.5rem;
   font-size: 15px;
   color: #f00;
   text-align: center;
+  z-index: 1000;
 }
 
 @media print {
